--- a/images/capi/ansible/windows/roles/runtimes/tasks/containerd.yml
+++ b/images/capi/ansible/windows/roles/runtimes/tasks/containerd.yml
@@ -61,7 +61,7 @@
     # programfiles is C:\Program Files, but should be C:\\Program Files
     # otherwise task Register Containerd fails with "invalid escape sequence: \P"
     containerd_conf_dir: '{{ programfiles.stdout | trim | regex_replace("\\", "\\\\") }}\\\\containerd'
-  when: (containerd_version |  version_compare('2','<')) and containerd_config_file is undefined
+  when: (containerd_version is version ('2','<')) and containerd_config_file is undefined
 
 - name: Copy containerd v2.x config file
   ansible.windows.win_template:
@@ -72,7 +72,7 @@
     plugin_bin_dir: "{{ systemdrive.stdout | trim }}/opt/cni/bin"
     plugin_conf_dir: "{{ systemdrive.stdout | trim }}/etc/cni/net.d"
     containerd_conf_dir: '{{ programfiles.stdout | trim | regex_replace("\\", "\\\\") }}\\\\containerd'
-  when: (containerd_version |  version_compare('2','>=')) and containerd_config_file is undefined
+  when: (containerd_version is version('2','>=')) and containerd_config_file is undefined
 
 - name: Copy custom containerd config file {{ containerd_config_file }}
   ansible.windows.win_template:
