--- a/images/capi/ansible/windows/roles/runtimes/tasks/containerd.yml
+++ b/images/capi/ansible/windows/roles/runtimes/tasks/containerd.yml
@@ -58,6 +58,7 @@
     allusersprofile: "{{ alluserprofile.stdout | trim }}"
     plugin_bin_dir: "{{ systemdrive.stdout | trim }}/opt/cni/bin"
     plugin_conf_dir: "{{ systemdrive.stdout | trim }}/etc/cni/net.d"
+    containerd_version: "{{ containerd_version }}"
     # programfiles is C:\Program Files, but should be C:\\Program Files
     # otherwise task Register Containerd fails with "invalid escape sequence: \P"
     containerd_conf_dir: '{{ programfiles.stdout | trim | regex_replace("\\", "\\\\") }}\\\\containerd'
@@ -71,6 +72,7 @@
     allusersprofile: "{{ alluserprofile.stdout | trim }}"
     plugin_bin_dir: "{{ systemdrive.stdout | trim }}/opt/cni/bin"
     plugin_conf_dir: "{{ systemdrive.stdout | trim }}/etc/cni/net.d"
+    containerd_version: "{{ containerd_version }}"
     containerd_conf_dir: '{{ programfiles.stdout | trim | regex_replace("\\", "\\\\") }}\\\\containerd'
   when: (containerd_version is version('2','>=')) and containerd_config_file is undefined
 
@@ -82,6 +84,7 @@
     allusersprofile: "{{ alluserprofile.stdout | trim }}"
     plugin_bin_dir: "{{ systemdrive.stdout | trim }}/opt/cni/bin"
     plugin_conf_dir: "{{ systemdrive.stdout | trim }}/etc/cni/net.d"
+    containerd_version: "{{ containerd_version }}"
     containerd_conf_dir: '{{ programfiles.stdout | trim | regex_replace("\\", "\\\\") }}\\\\containerd'
   when: containerd_config_file is defined
 
